--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="tipo_de_anuncio">Tipo de anuncio</string>
     <string name="anunciar">Anunciar</string>
     <string name="usuario">usuario</string>
+    <string name="slogan">Anúncie fácil e rápido</string>
+    <string name="todo">TODO</string>
 
     <string-array name="tipos">
         <item>Automóveis</item>
